# paddle-inference-rust-api

./: .gitignore  .gitmodules  Cargo.toml  README.md
examples/: basic.rs
paddle-inference-api-sys/: Cargo.toml  build.rs  paddle_wrapper.h
src/: config.rs  copy_pd_input.rs  copy_pd_output.rs  lib.rs  predictor.rs  tensor.rs  version.rs
